--- a/SnakeB23.vcxproj.filters
+++ b/SnakeB23.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="map.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="gameManager.c">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="character.h">
@@ -36,6 +39,9 @@
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
     <ClInclude Include="map.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="gameManager.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
