--- a/v2.0/workspace/snake.cbp
+++ b/v2.0/workspace/snake.cbp
@@ -30,7 +30,7 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add directory="C:/Users/maxim/Documents/GitHub/Projet-B23/v2.0/SDL/include" />
+			<Add directory="C:/Users/Théo Lejeune/Documents/GitHub/Projet-B23/v2.0/SDL/include" />
 		</Compiler>
 		<Linker>
 			<Add library="mingw32" />
@@ -40,7 +40,7 @@
 			<Add library="gdi32" />
 			<Add library="winmm" />
 			<Add library="dxguid" />
-			<Add directory="C:/Users/maxim/Documents/GitHub/Projet-B23/v2.0/SDL/lib" />
+			<Add directory="C:/Users/Théo Lejeune/Documents/GitHub/Projet-B23/v2.0/SDL/lib" />
 		</Linker>
 		<Unit filename="cb.bmp" />
 		<Unit filename="main.cpp" />
