--- a/v2.0/workspace/snake.cbp
+++ b/v2.0/workspace/snake.cbp
@@ -43,6 +43,9 @@
 			<Add directory="C:/Users/Théo Lejeune/Documents/GitHub/Projet-B23/v2.0/SDL/lib" />
 		</Linker>
 		<Unit filename="cb.bmp" />
+		<Unit filename="character.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="character.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
@@ -51,6 +54,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="render.h" />
+		<Unit filename="structures.h" />
+		<Unit filename="utility.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="utility.h" />
 		<Extensions>
 			<code_completion />
